finish timer on random page

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
     <title>Wardrobe</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gaegu:wght@700&family=Sriracha&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
