did some UX improvement & modify setting page style

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
       href="https://fonts.googleapis.com/css2?family=Gaegu:wght@700&family=Sriracha&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
