--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,10 @@
     -->
     <title>Wardrobe</title>
 
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link
       href="https://fonts.googleapis.com/css2?family=Gaegu:wght@700&family=Sriracha&display=swap"
